legacy_importer/legacy-imp-qa/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: legacy-imp-qa
  namespace: legacy-imp-qa
spec:
  type: NodePort
  selector:
    app: legacy-imp-qa-web
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
